# cortex-mcp

./: .coverage  .gitignore  .roomodes  CLAUDE.md  CLAUDE_CODE_SETUP.md  FASE27_COMPLETION_REPORT.md  code.md  extract_phase27_plan.py  fase27_plan_summary.md  fase27_strategic_plan.json  keymaker_implementation_blueprint.json  keymaker_implementation_plan.md  mcp.json  phase27_logs.json  plan_slash_commands_cortexmcp.json  projectBrief.md  pyproject.toml  server.py  test_complete_workflow.py
.roo/: mcp.json
config/: agent_profiles.json  phase_templates.json  resource_assignment_rules.json  task_generation_templates.json
docs/: implementationPlan.md  implementationPlan_phase2.md  knowledge_management_enhancement.md  meta-reflection_ia-ia_collaborative_planning_toolkit.md  meta-reflection_observability.md  meta-reflection_phase2.2.md  meta-reflection_phase2.3.md  meta-reflection_phase2.4.md  meta-reflection_phase2.md  observability_strategy.md  phase2.3_preparation.md  phase2.4_preparation.md  phase2.5_preparation.md  phase2.8.2_preparation.md  phase2.8.3_preparation.md  phase2.8.4-prep_workflow_consolidation.md  phase2.8.5_planning_toolkit_mvp.md  phase2.8_preparation.md  phase27_collaborative_architecture.md  phase3_preparation.md
ideas/: completed_improvements.md  future_improvements.json  meta_reflection_ecosystem.md  process_optimization_brainstorm.md  uso de subagents para planning.md
prompts/: __init__.py  planning_prompts.py
schemas/: __init__.py  architect_payloads.py  collaborative_types.py  knowledge_payloads.py  planning_payloads.py  (+2 more)
utils/: logger.py  (+1 more)
(+96 files in other folders)
